// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-chip should apply disabled class to avatar when chip is disabled 1`] = `
<modus-wc-chip aria-label="Disabled chip with avatar" disabled="true" image-url="test.jpg">
  <!---->
  <button aria-disabled="true" aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip modus-wc-chip--disabled" disabled="" tabindex="0" type="button">
    <modus-wc-avatar alt="chip avatar image" aria-label="chip avatar" class="modus-wc-chip-avatar-container" custom-class="modus-wc-chip-avatar modus-wc-chip-avatar--disabled" img-src="test.jpg"></modus-wc-avatar>
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should not render image or check icon when imgUrl not provided and showCheck is false 1`] = `
<modus-wc-chip aria-label="No avatar chip">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render check icon when no imageUrl is provided and showCheck is true 1`] = `
<modus-wc-chip aria-label="Check chip" show-check="true">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
    <svg class="mi-check mi-solid modus-wc-chip-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
      <path d="M9 18c-.26 0-.51-.1-.71-.29l-4-4A.996.996 0 1 1 5.7 12.3l3.29 3.29 9.29-9.29a.996.996 0 1 1 1.41 1.41l-10 10c-.2.2-.45.29-.71.29Z"></path>
    </svg>
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render close icon when showClose is true 1`] = `
<modus-wc-chip aria-label="Close chip" show-close="true">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
    <svg class="mi-cancel-circle mi-solid modus-wc-chip-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
      <path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m4.3 14.3a.996.996 0 0 1-1.41 0L12 13.41 9.11 16.3a.996.996 0 1 1-1.41-1.41L10.59 12 7.7 9.11A.996.996 0 1 1 9.11 7.7L12 10.59l2.89-2.89a.996.996 0 1 1 1.41 1.41L13.41 12l2.89 2.89c.38.38.38 1.02 0 1.41"></path>
    </svg>
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render label when provided 1`] = `
<modus-wc-chip aria-label="Labeled chip" label="Test Label">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
    <span class="modus-wc-chip-label">
      Test Label
    </span>
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with content in the primary slot 1`] = `
<modus-wc-chip aria-label="Slotted chip">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
    <span>
      Slot content
    </span>
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with custom props 1`] = `
<modus-wc-chip active="true" aria-label="Custom chip" custom-class="test-class" size="lg" variant="outline">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-lg modus-wc-chip modus-wc-chip--active modus-wc-chip--outline test-class" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with default props 1`] = `
<modus-wc-chip aria-label="Default chip">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with disabled attribute 1`] = `
<modus-wc-chip aria-label="Disabled chip" disabled="true">
  <!---->
  <button aria-disabled="true" aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip modus-wc-chip--disabled" disabled="" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with image avatar when imageUrl is provided 1`] = `
<modus-wc-chip aria-label="Chip with avatar" image-url="test.jpg">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
    <modus-wc-avatar alt="chip avatar image" aria-label="chip avatar" class="modus-wc-chip-avatar-container" custom-class="modus-wc-chip-avatar false" img-src="test.jpg"></modus-wc-avatar>
  </button>
</modus-wc-chip>
`;
